--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,66 +4,135 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
     tools:context=".Dashboard">
-<TextView
-
+<LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Leaving from"/>
+    android:layout_marginTop="30dp"
+    android:layout_marginLeft="20dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:src="@drawable/from"/>
+
     <Spinner
         android:id="@+id/leavingFrom"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="7dp"
+        android:textColor="#FFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:entries="@array/destination_arrays"
         android:prompt="@string/destination_prompt" />
-    <TextView
 
+</LinearLayout>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/arrow"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Going to"/>
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:src="@drawable/from"/>
 
     <Spinner
         android:id="@+id/goingTo"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:entries="@array/destination_arrays"
         android:prompt="@string/destination_prompt" />
+    </LinearLayout>
 
-
-    <EditText
-          android:id="@+id/pickDate"
-          android:hint="Pick a date"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"  />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:text="Desired Time"/>
-
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:orientation="horizontal">
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/cal"/>
+        <TextView
+        android:id="@+id/pickDate"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+            android:textColor="#000000"
+        android:text="Pick a date" />
+</LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
+    android:layout_marginLeft="20dp">
+<ImageView
+    android:layout_width="40dp"
+    android:layout_height="45dp"
+    android:src="@drawable/time"/>
     <Spinner
         android:id="@+id/timeOfTravel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#FFF"
         android:entries="@array/time"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="7dp"
         android:prompt="@string/pick_time" />
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp">
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="45dp"
+            android:src="@drawable/people"/>
     <TextView
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Number of people"/>
+        android:textColor="#0E0E0E"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="7dp"
+        android:text="Number of people" />
+
     <Spinner
         android:id="@+id/numberOfPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/count"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="7dp"
         android:prompt="@string/number_of_people" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnSearch"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:background="#FFD600"
         android:text="Search" />
 
 
