--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,44 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:orientation="vertical"
     tools:context=".Register">
+
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:src="@drawable/busregister"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="City Light"
+        android:textSize="50dp"
+        android:layout_gravity="center"
+        android:fontFamily="@font/batmfa"
+        android:textColor="#F3E906"/>
 
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:ellipsize="start"
         android:ems="10"
+        android:gravity="center_horizontal"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:singleLine="true"
+        android:textColorHint="#DAD2D2" />
 
     <EditText
         android:id="@+id/registerEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:layout_centerInParent="true"
+        android:ellipsize="start"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:textColorHint="#DAD2D2"
         android:ems="10"
-        android:inputType="textEmailAddress"
-        android:text="email" />
+        android:hint="email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/registerPassword"
         android:layout_width="match_parent"
+        android:singleLine="true"
+        android:layout_centerInParent="true"
+        android:ellipsize="start"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:textColorHint="#DAD2D2"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPassword"
-        android:text="Password" />
+        android:hint="Password"
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/registerConfrmPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:singleLine="true"
+        android:layout_centerInParent="true"
+        android:ellipsize="start"
+        android:layout_marginTop="5dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center"
+        android:textColorHint="#DAD2D2"
+        android:hint="Confirm Password"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnRegisterRegister"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="#FFD600"
         android:text="Register" />
 
     <ProgressBar
