--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -73,7 +73,7 @@
         android:id="@+id/pickDate"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="8dp"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
             android:textColor="#000000"
         android:text="Pick a date" />
