--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -69,14 +69,15 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/cal"/>
+
         <TextView
-        android:id="@+id/pickDate"
-            android:layout_marginTop="10dp"
+            android:id="@+id/pickDate"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-            android:textColor="#000000"
-        android:text="Pick a date" />
+            android:layout_marginTop="10dp"
+            android:hint="Pick a date"
+            android:textColor="#000000" />
 </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
