data coming to recyclerview

--- a/app/src/main/res/layout/activity_my_booking.xml
+++ b/app/src/main/res/layout/activity_my_booking.xml
@@ -10,5 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/myRe"/>
+        android:id="@+id/list">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
