--- a/app/src/main/res/layout/booking_row.xml
+++ b/app/src/main/res/layout/booking_row.xml
@@ -10,6 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/list_root"
         android:layout_height="248dp"
         android:orientation="vertical"
         android:background="#00B8D4"
