--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -8,32 +8,44 @@
     tools:context=".SearchResult">
 
     <LinearLayout
+        android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/searchResultFrom"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        android:text="Basic Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
-
+        android:layout_margin="10dp"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="to"/>
 
     <TextView
         android:id="@+id/searchResultTo"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        android:text="Basic Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
 
     <LinearLayout
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
+            android:text="Date"
+            android:layout_margin="10dp"
+            android:textSize="20dp"
             android:id="@+id/searchResultDate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -44,12 +56,15 @@
             android:layout_height="wrap_content" />
 
         <TextView
-
+            android:layout_margin="10dp"
+            android:textSize="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Number of Passengers:"/>
 
         <TextView
+            android:layout_margin="10dp"
+            android:textSize="20dp"
             android:id="@+id/searchResultCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
