--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,4 +4,7 @@
     <item
         android:id="@+id/mbk"
         android:title="My Booking"/>
+    <item
+        android:id="@+id/out"
+        android:title="Logout"/>
 </menu>
