--- a/app/src/main/res/layout/booking_row.xml
+++ b/app/src/main/res/layout/booking_row.xml
@@ -15,7 +15,10 @@
         android:orientation="vertical"
         android:background="#00B8D4"
         android:layout_margin="5dp">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/idd"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
