--- a/app/src/main/res/layout/booking_row.xml
+++ b/app/src/main/res/layout/booking_row.xml
@@ -11,10 +11,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/list_root"
-        android:layout_height="248dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#00B8D4"
+        android:background="#E9E3D9"
         android:layout_margin="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,6 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rowBtnDelete"
+            android:layout_marginBottom="5dp"
             android:text="Delete"/>
     </LinearLayout>
 
